new Double --> Double.valueOf