@@ -78,7 +78,7 @@ class DefaultDivExpr extends DefaultMultiplicativeExpr
 
         double result = lhsValue.doubleValue() / rhsValue.doubleValue();
 
-        return new Double( result );
+        return Double.valueOf( result );
     }
 
 }
