@@ -77,7 +77,7 @@ class DefaultPlusExpr extends DefaultAdditiveExpr
 
         double result = lhsValue.doubleValue() + rhsValue.doubleValue();
 
-        return new Double( result );        
+        return Double.valueOf( result );        
     }
     
 }
