@@ -109,7 +109,7 @@ public class PositionFunction implements Function
      */
     public static Double evaluate(Context context)
     {
-        return new Double( context.getPosition() );
+        return Double.valueOf( context.getPosition() );
     }
     
 }
